--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <div><h3>SEARCH EVENTS</h3></div>
-    <br>
+    <div class="card">SEARCH EVENTS</div>
     <br>
     <div class="box">
         <div class="container">
@@ -24,7 +23,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="rounded float-left"
                             alt="Profile">
                         <div class="dates"><input type="date" date="DOB" id="DOB"><br></div>
-                        <div class="seats">Seats Available:23</p>
+                        <div class="seats"><p>Seats Available:23</p>
                         </div>
                         <div class="book"><button>Book Now</button></div>
                     </div>
@@ -36,7 +35,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="rounded float-left"
                             alt="Profile">
                         <div class="dates"><input type="date" date="DOB" id="DOB"><br></div>
-                        <div class="seats">Seats Available:23</p>
+                        <div class="seats"><p>Seats Available:23</p>
                         </div>
                         <div class="book"><button>Book Now</button></div>
                     </div>
@@ -60,7 +59,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="rounded float-left"
                             alt="Profile">
                         <div class="dates"><input type="date" date="DOB" id="DOB"><br></div>
-                        <div class="seats">Seats Available:23</p>
+                        <div class="seats"><p>Seats Available:23</p>
                         </div>
                         <div class="book"><button>Book Now</button></div>
                     </div>
@@ -72,7 +71,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="rounded float-left"
                             alt="Profile">
                         <div class="dates"><input type="date" date="DOB" id="DOB"><br></div>
-                        <div class="seats">Seats Available:23</p>
+                        <div class="seats"><p>Seats Available:23</p>
                         </div>
                         <div class="book"><button>Book Now</button></div>
                     </div>
@@ -96,7 +95,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="rounded float-left"
                             alt="Profile">
                         <div class="dates"><input type="date" date="DOB" id="DOB"><br></div>
-                        <div class="seats">Seats Available:23</p>
+                        <div class="seats"><p>Seats Available:23</p>
                         </div>
                         <div class="book"><button>Book Now</button></div>
                     </div>
@@ -108,7 +107,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="rounded float-left"
                             alt="Profile">
                         <div class="dates"><input type="date" date="DOB" id="DOB"><br></div>
-                        <div class="seats">Seats Available:23</p>
+                        <div class="seats"><p>Seats Available:23</p>
                         </div>
                         <div class="book"><button>Book Now</button></div>
                     </div>
